# app/serializers/money_transaction_serializer.rb
@@ -1,0 +1,4 @@
+class MoneyTransactionSerializer
+  include FastJsonapi::ObjectSerializer
+  attributes :creditor, :debitor, :amount
+end
